test/cli/test/multiple-validate-rules/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Service
  policy: restrict-service-ports
  resources:
  - service-example-port-22
  result: pass
  rule: restrict-port-range
- kind: Service
  policy: restrict-service-ports
  resources:
  - service-example-port-22
  result: pass
  rule: restrict-nodeport
